# Model_Machine_Learning

./: .env.example  .gitignore  Dockerfile  README.md  create_db.py  docker-compose.yml  predictions.db  pyproject.toml  requirements.txt  requirements.txt.old  test.db  test_dataset.db
.github/workflows/: ci.yml
app/: main.py  models.py
app/api/v1/: endpoints.py  p3_endpoints.py
app/core/: __init__.py  database.py
app/schemas/: p3_request.py
app/services/: p3_model.py
data/: X_test.csv  y_test.csv
tests/: conftest.py
tests/integration/: test_p3_dataset.py  test_p3_predict.py
tests/unit/: test_health.py
